--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="next_button">Далее</string>
     <string name="true_button">Верно</string>
     <string name="false_button">Не верно</string>
+    <string name="warning_text">Вы точно хотите сжульничать?</string>
+    <string name="show_answer_button">Показать ответ</string>
+    <string name="cheat_button">Сжульничать</string>
+    <string name="judgment_toast">Читерить плохо</string>
 </resources>
