--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="show_answer_button">Показать ответ</string>
     <string name="cheat_button">Сжульничать</string>
     <string name="judgment_toast">Читерить плохо</string>
+    <string name="tips_left_text">Осталось</string>
 </resources>
